examples/test/testpolicy9040.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy9040
  namespace: namespace377
spec:
  podSelector:
    matchLabels:
      key12: value43
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key26: value3
          key13: value14
          key40: value22
      podSelector:
        matchLabels:
          key44: value11
